connecting bff to paymentapi

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
 FLASK_APP=flaskr/app
 FLASK_ENV=development
 APP_NAME=abcall-bff
-PAYMENT_API_PATH=http://localhost:5005
+PAYMENT_API_PATH=http://api:3005
