Adding kubernetes configuration

--- a/kubernetes/k8s-configMap.yaml
+++ b/kubernetes/k8s-configMap.yaml
@@ -6,4 +6,4 @@ data:
   FLASK_APP: "flaskr/app"
   FLASK_ENV: "production"
   APP_NAME: "abcall-bff"
-  PAYMENT_API_PATH: ""
+  PAYMENT_API_PATH: "http://abcall-payment-api-service:3005"
