--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ FLASK_APP=flaskr/app
 FLASK_ENV=development
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=http://api:3005
+URL_REPORTS_SERVICE=http://reports:3008/
