--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ FLASK_APP=flaskr/app
 FLASK_ENV=development
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=http://localhost:5005
+URL_REPORTS_SERVICE=http://localhost:3008
