--- a/kubernetes/k8s-configMap.yaml
+++ b/kubernetes/k8s-configMap.yaml
@@ -7,3 +7,4 @@ data:
   FLASK_ENV: "production"
   APP_NAME: "abcall-bff"
   PAYMENT_API_PATH: "http://abcall-payment-api-service:3005"
+  URL_REPORTS_SERVICE: "http://abcall-reports-api-service:3008"
