--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ FLASK_ENV=development
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=http://api:3005
 URL_REPORTS_SERVICE=http://reports:3008/
+ISSUE_API_PATH=http://api-issue:3007/
