--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 FLASK_APP=flaskr/app
-FLASK_ENV=development
+FLASK_ENV=local
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=http://api:3005
 URL_REPORTS_SERVICE=http://reports:3008/
