--- a/docker-compose.develop.yml
+++ b/docker-compose.develop.yml
@@ -15,9 +15,50 @@ services:
     networks:
       - bff_net
       - app_net
+    depends_on:
+      - issues-api
+    links:
+      - issues-api
+  issues-api:
+    build:
+      context: ../abcall-issues-api/.
+      dockerfile: ../abcall-issues-api/dev.Dockerfile
+    container_name: abcall-issues-local-api
+    restart: always
+    volumes:
+      - "../abcall-issues-api/.:/app"
+    ports:
+      - "5007:3007"
+    env_file:
+      - ../abcall-issues-api/.env.local
+    tty: true
+    links:
+      - db
+    depends_on:
+      - db
+    networks:
+      - issues_net
+      - app_net 
+  db:
+    build:
+      context: ../abcall-issues-api/.
+      dockerfile: ../abcall-issues-api/db.Dockerfile
+    env_file:
+      - ../abcall-issues-api/.env.db
+    container_name: issues-local-db
+    volumes:
+      - "./data/postgresql:/var/lib/postgresql"
+      - "./docker/postgresql:/docker-entrypoint-initdb.d"
+    ports:
+      - "5433:5432"
+    networks:
+      - issues_net
 
 
 networks:
+  issues_net:
+    name: issues_net
+    driver: bridge
   bff_net:
     name: bff_net
     driver: bridge
