--- a/.env.local
+++ b/.env.local
@@ -2,5 +2,6 @@ FLASK_APP=flaskr/app
 FLASK_ENV=local
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=http://api:3005
+CUSTOMER_API_PATH=http://api-customer:3003/
 URL_REPORTS_SERVICE=http://reports:3008/
 ISSUE_API_PATH=http://issues-api:3007/
