generating token with jwt after signin

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ FLASK_ENV=development
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=http://localhost:5005
 URL_REPORTS_SERVICE=http://localhost:3008
+AUTH_API_PATH=http://api-auth:3004
+SECRET_KEY=LF3UfrT8gETx5maz4C4JjtaL176GMyCy28a-7bqvDbE=
+HOURS_TO_EXPIRE_SESSION=1
