--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,6 @@ FLASK_ENV=test
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=
 URL_REPORTS_SERVICE=
+AUTH_API_PATH=
+SECRET_KEY=LF3UfrT8gETx5maz4C4JjtaL176GMyCy28a-7bqvDbE=
+HOURS_TO_EXPIRE_SESSION=1
