Adding customer user creation and fix the coverage

--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,10 @@
 FLASK_APP=flaskr/app
 FLASK_ENV=test
 APP_NAME=abcall-bff
-PAYMENT_API_PATH=
-URL_REPORTS_SERVICE=
-AUTH_API_PATH=
+PAYMENT_API_PATH=http://api:3005
+CUSTOMER_API_PATH=http://api-customer:3003
+URL_REPORTS_SERVICE=http://reports:3008
+ISSUE_API_PATH=http://issues-api:3007/
+AUTH_API_PATH=http://api-auth:3004
 SECRET_KEY=LF3UfrT8gETx5maz4C4JjtaL176GMyCy28a-7bqvDbE=
 HOURS_TO_EXPIRE_SESSION=1
