--- a/.env.test
+++ b/.env.test
@@ -2,7 +2,7 @@ FLASK_APP=flaskr/app
 FLASK_ENV=test
 APP_NAME=abcall-bff
 PAYMENT_API_PATH=http://api:3005
-CUSTOMER_API_PATH=http://api-customer:3003
+CUSTOMER_API_PATH=http://api-customer:3003/
 URL_REPORTS_SERVICE=http://reports:3008
 ISSUE_API_PATH=http://issues-api:3007/
 AUTH_API_PATH=http://api-auth:3004
