--- a/.github/workflows/release-to-main.yaml
+++ b/.github/workflows/release-to-main.yaml
@@ -84,5 +84,6 @@ jobs:
           sed -e "s|{{SECRET_KEY}}|${SECRET_KEY}|g" \
           ./kubernetes/k8s-secrets.tmpl > kubernetes/k8s-secrets.yaml
           kubectl apply -f kubernetes/k8s-configMap.yaml
+          kubectl apply -f kubernetes/k8s-secrets.yaml
           kubectl apply -f kubernetes/new-k8s-deployment.yaml
           kubectl apply -f kubernetes/k8s-ingress.yaml
