bff adding new relic

--- a/newrelic.ini
+++ b/newrelic.ini
@@ -30,7 +30,7 @@
 # your account in the New Relic service. For more information on
 # storing and generating license keys, see
 # https://docs.newrelic.com/docs/apis/intro-apis/new-relic-api-keys/#ingest-license-key
-license_key = 517e72b4af40a95d7fb968fbfa3ba2e7FFFFNRAL
+license_key = ef4821fc407e495dee5823ce1794f535FFFFNRAL
 
 # The application name. Set this to be the name of your
 # application as you would like it to show up in New Relic UI.
@@ -40,7 +40,7 @@ license_key = 517e72b4af40a95d7fb968fbfa3ba2e7FFFFNRAL
 # app names to group your aggregated data. For further details,
 # please see:
 # https://docs.newrelic.com/docs/apm/agents/manage-apm-agents/app-naming/use-multiple-names-app/
-app_name = bff-api
+app_name = abcall-bff-api
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
@@ -246,7 +246,7 @@ monitor_mode = false
 monitor_mode = false
 
 [newrelic:staging]
-app_name = bff-api (Staging)
+app_name = abcall-bff-api (Staging)
 monitor_mode = true
 
 [newrelic:production]
